# dyld-ghidra-cache-patcher

./: .gitignore  README.md  dyld_ghidra_cache_page_patcher.py  pyproject.toml
dyld_ghidra_cache_patcher/: __init__.py  arm64.py  cli.py  constants.py  dyld_cache.py  finder.py  ghidra.py  macho.py  utils.py
dyld_ghidra_cache_patcher/templates/: AddDyldTargetedCachePages.java  __init__.py
